NF-26 big initial draft of the sogr builder implementation - no actual policy replacement year calculation yet